--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-	chache: maven
+	cache: maven
 
     - name: Build with Maven
       run: mvn clean package
